--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ body
 
 {
     overflow: hidden;
-    background-color: black;
+    background-color: white;
     text-align: center; 
  
 }
@@ -21,24 +21,6 @@ body
     top: 0;
     left: 0;
     outline: none;
-}
-
-form {
-    
-    font-family: 'Courier New';
-    /* position: absolute; */
-    display: block;
-    color: whitesmoke;
-    /* z-index: 99; */
-    left: 0%;
-    top: 0%;
-    }
-
-#kofi {
-    text-align: left;  
-    position: fixed;
-    left: 0;
-    bottom: 0;
 }
 
 input[type="button"] {
